webui/src/routes/styles.css
:root {
  --background: #fff;
  --color: #222;
  --component-background: #e0e0e0;
  --highlight-color: #ff3d00;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  padding-bottom: 0.2em;
  /*display: inline-block;*/
  /*border-bottom: 2px solid var(--highlight-color);*/
}

nav {
  background: var(--component-background);
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  clear: both;
}

.pure-g > div {
  box-sizing: border-box;
}

.l-box {
  padding: 1em;
}

